# OSDR1

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  format.yml  lint.yml  test.yml  typecheck.yml
docs/: conf.py  examples.rst  getting_started.rst  index.rst
docs/api/: analysis.rst  dataset.rst  index.rst  model.rst  plot.rst  preprocess.rst  raw.rst  simulate.rst  tissue.rst
docs/notebooks/examples/model_plots/: calibration.ipynb  cross_validation.ipynb
docs/notebooks/examples/two_cell_plots/: growth_rate.ipynb  phase_portrait.ipynb  trajectory.ipynb
docs/notebooks/paper_figures/: Figure-02.ipynb  Figure-03.ipynb  Figure-04.ipynb  Figure-05.ipynb
docs/tutorials/: defining-cell-divisions.ipynb  index.rst  one-shot-dynamics-in-7-minutes.ipynb  tissue-dataset-model.ipynb
src/tdm/: cache.py  cell_types.py  download.py  log.py  paths.py  style.py  utils.py
src/tdm/analysis/: analysis.py  bootstrap.py
src/tdm/dataset/: __init__.py  apply_model.py  bootstrap.py  concat.py  dataset.py  extrapolate_neighbors.py  neighbors.py  polynomial.py  restrict.py  utils.py
src/tdm/model/: __init__.py  bootstrap.py  constant.py  example_models.py  logistic_regression.py  maximal_density_enforcer.py  model.py  selection.py  utils.py
src/tdm/numerical/: __init__.py  phase_portrait_analysis.py
src/tdm/plot/: utils.py
src/tdm/plot/model/: calibration.py  interpret.py  pval.py
src/tdm/plot/n_cells/: trajectory.py
src/tdm/plot/preprocess/: ki67.py
src/tdm/plot/three_cells/: phase_portrait.py  trajectory.py
src/tdm/plot/tissue/: __init__.py  spatial.py  stepper.py
src/tdm/plot/two_cells/: __init__.py  phase_portrait.py
src/tdm/preprocess/: ki67.py  recluster.py  single_cell_df.py
src/tdm/publications/first/: analyses.py  three_datasets.py  triple_negative_plots.py
src/tdm/publications/first/figures/: f1.py  f2.py  f3.py  f4.py  f5.py
src/tdm/raw/: __init__.py  breast_imc.py  breast_mibi.py  get_raw.py  triple_negative_imc.py
src/tdm/simulate/: __init__.py  deterministic.py  generate_distribution.py  tissue_step.py
src/tdm/tissue/: __init__.py  stub.py  tissue.py
test/analysis/: test_analysis.py
test/dataset/: test_concat.py  test_extrapolate_neighbors.py  test_neighbors.py  test_polynomial.py
test/model/: test_example_models.py  test_logistic_regression.py
test/preprocess/: test_single_cell_df.py
test/raw/: test_breast_imc1.py  test_breast_imc_utils.py  test_breast_mibi.py
test/raza_breast_mibi/: test_utils.py
test/simulate/: test_tissue_step.py
test/tissue/: test_tissue.py
