[metadata]
name = tdm
version = 0.0.1
url = https://github.com/JonathanSomer/osdr
author = Jonathan Somer
author_email = "Jonathan Somer" <jonathan.somer@gmail.com>
description = Estimate multi-cellular temporal dynamics using spatial measurements from tumor biopsies.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.10
install_requires =
    jupyter
    numpy
    pandas
    statsmodels
    scikit-learn
    numba
    seaborn
    tqdm
    contourpy
    numdifftools
    tifffile
    shapely
    sympy
    tabulate
    tox
    frozendict
    lifelines
    torch
    openpyxl
    anndata

[options.extras_require]
dev =
    pyinstrument
    pytest
    pytest-cov
    pytest-mpl
    pytest-randomly
docs =
    sphinx
    sphinx-autobuild
    pydata-sphinx-theme
    sphinx-copybutton
    nbsphinx
    sphinx-gallery
    pandoc
    autoclasstoc
    sphinxcontrib-napoleon

[options.packages.find]
where = src
exclude =
    test*

######################
# Tool configuration #
######################

[tool:pytest]
testpaths = test
addopts = --cov -vv -s --cov-report=html --ignore=src/tdm/plot/ --ignore=src/tdm/raw/ --ignore=src/tdm/publications/


[coverage:run]
source = tdm
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[flake8]
max-line-length = 120
ignore = E501

[tox]
reuse_existing_virtualenv = true

[tox:tox]
isolated_build = True
envlist =
    py310
    py311
    py312


[testenv]
usedevelop = true
extras = dev
commands =
    pytest -vv --cov=src --cov-report=xml --cov-report=term --ignore=src/tdm/plot/ --ignore=src/tdm/raw/ --ignore=src/tdm/publications/

[testenv:typecheck]
extras = dev
deps =
    mypy
    types-requests
commands =
    mypy --ignore-missing-imports --allow-redefinition {posargs:src test}

[testenv:format]
skip_install = True
deps =
    black
commands = black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands = flake8 {posargs:src test}

[testenv:docs]
extras = docs
commands = 
    sphinx-build -n --keep-going -b html docs/ docs/_build/html

[testenv:devdocs]
extras = docs
deps =
    sphinx-autobuild
commands = 
    sphinx-autobuild -E -a -b html docs/ docs/_build/html --port=9876 --watch=src/

[testenv:docs-no-build]
commands = 
    python -m http.server 9876 -d docs/_build/html/
